--- a/.make/demo/images.sass
+++ b/.make/demo/images.sass
@@ -1,4 +1,5 @@
 
+$grey-darken: #333a3e
 
 html, body
   margin: 0
@@ -8,6 +9,7 @@ body
   font-family: sans-serif
   font-size: 16px
   color: #333a3e
+  background: #f7f7f7
 
 table.images-list
   max-width: 800px
@@ -16,18 +18,24 @@ table.images-list
   table-layout: fixed
   border-collapse: collapse
 
+  & > tbody
+    background: white
+    border-radius: 3px
+    box-shadow: 0 0 0 1px rgba($grey-darken, 0.12), 0 1px 2px 0 rgba($grey-darken, 0.2)
+
   th
     height: 64px
-    font-size: 24px
+    font-size: 20px
 
   tr._row > td
     padding: 8px 12px
 
+    &._img
+      text-align: center
+      padding: 12px
+
   tr._bg-dark td._img
     background-color: #333a3e
-
-  // td._img img
-  //   max-height: 128px
 
   a._link
     color: #267bbd
