--- a/images.css
+++ b/images.css
@@ -7,6 +7,7 @@ body {
   font-family: sans-serif;
   font-size: 16px;
   color: #333a3e;
+  background: #f7f7f7;
 }
 
 table.images-list {
@@ -15,12 +16,21 @@ table.images-list {
   table-layout: fixed;
   border-collapse: collapse;
 }
+table.images-list > tbody {
+  background: white;
+  border-radius: 3px;
+  box-shadow: 0 0 0 1px rgba(51, 58, 62, 0.12), 0 1px 2px 0 rgba(51, 58, 62, 0.2);
+}
 table.images-list th {
   height: 64px;
-  font-size: 24px;
+  font-size: 20px;
 }
 table.images-list tr._row > td {
   padding: 8px 12px;
+}
+table.images-list tr._row > td._img {
+  text-align: center;
+  padding: 12px;
 }
 table.images-list tr._bg-dark td._img {
   background-color: #333a3e;
