--- a/.make/demo/images.sass
+++ b/.make/demo/images.sass
@@ -34,6 +34,9 @@ table.images-list
       text-align: center
       padding: 12px
 
+      img
+        max-width: 40vw
+
   tr._bg-dark td._img
     background-color: #333a3e
 
