--- a/.make/demo/images.sass
+++ b/.make/demo/images.sass
@@ -44,3 +44,19 @@ table.images-list
     color: #267bbd
     text-decoration: none
     border-bottom: 1px dotted #267bbd
+
+body._md-index
+  padding: 8px
+
+  a
+    display: block
+    background: white
+    border-radius: 3px
+    box-shadow: 0 0 0 1px rgba($grey-darken, 0.12), 0 1px 2px 0 rgba($grey-darken, 0.2)
+    padding: 8px
+
+    &:hover
+      box-shadow: 0 0 0 1px rgba($grey-darken, 0.12), 0 1px 3px 0 rgba($grey-darken, 0.4)
+
+    img
+      max-width: 100%
