--- a/images.css
+++ b/images.css
@@ -43,3 +43,20 @@ table.images-list a._link {
   text-decoration: none;
   border-bottom: 1px dotted #267bbd;
 }
+
+body._md-index {
+  padding: 8px;
+}
+body._md-index a {
+  display: block;
+  background: white;
+  border-radius: 3px;
+  box-shadow: 0 0 0 1px rgba(51, 58, 62, 0.12), 0 1px 2px 0 rgba(51, 58, 62, 0.2);
+  padding: 8px;
+}
+body._md-index a:hover {
+  box-shadow: 0 0 0 1px rgba(51, 58, 62, 0.12), 0 1px 3px 0 rgba(51, 58, 62, 0.4);
+}
+body._md-index a img {
+  max-width: 100%;
+}
