--- a/.make/demo/images.sass
+++ b/.make/demo/images.sass
@@ -47,6 +47,9 @@ table.images-list
 
 body._md-index
   padding: 8px
+  max-width: 960px
+  margin-left: auto
+  margin-right: auto
 
   a
     display: block
