--- a/.make/demo/images.sass
+++ b/.make/demo/images.sass
@@ -48,8 +48,7 @@ table.images-list
 body._md-index
   padding: 8px
   max-width: 960px
-  margin-left: auto
-  margin-right: auto
+  margin: 32px auto 128px
 
   a
     display: block
