--- a/images.css
+++ b/images.css
@@ -47,8 +47,7 @@ table.images-list a._link {
 body._md-index {
   padding: 8px;
   max-width: 960px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 32px auto 128px;
 }
 body._md-index a {
   display: block;
