--- a/.make/demo/images.sass
+++ b/.make/demo/images.sass
@@ -50,6 +50,10 @@ body._md-index
   max-width: 960px
   margin: 32px auto 128px
 
+  h2
+    font-size: 24px
+    font-weight: 500
+
   a
     display: block
     background: white
