--- a/.make/demo/images.sass
+++ b/.make/demo/images.sass
@@ -46,9 +46,12 @@ table.images-list
     border-bottom: 1px dotted #267bbd
 
 body._md-index
-  padding: 8px
   max-width: 960px
   margin: 32px auto 128px
+
+  padding: 8px
+  @media (min-width: 768px)
+    padding: 32px
 
   h2
     font-size: 24px
