--- a/.make/demo/images.sass
+++ b/.make/demo/images.sass
@@ -47,11 +47,14 @@ table.images-list
 
 body._md-index
   max-width: 960px
-  margin: 32px auto 128px
 
   padding: 8px
   @media (min-width: 768px)
     padding: 32px
+
+  main
+    display: block
+    margin: 32px auto 128px
 
   h2
     font-size: 24px
