--- a/.make/demo/images.sass
+++ b/.make/demo/images.sass
@@ -46,15 +46,14 @@ table.images-list
     border-bottom: 1px dotted #267bbd
 
 body._md-index
-  max-width: 960px
-
   padding: 8px
   @media (min-width: 768px)
     padding: 32px
 
-  main
+  main, header
     display: block
     margin: 32px auto 128px
+    max-width: 960px
 
   h2
     font-size: 24px
