--- a/.make/demo/images.sass
+++ b/.make/demo/images.sass
@@ -52,8 +52,13 @@ body._md-index
 
   main, header
     display: block
-    margin: 32px auto 128px
     max-width: 800px
+    
+  header
+    margin: 0 auto
+
+  main
+    margin: 32px auto 128px
 
   h2
     font-size: 24px
