--- a/.make/demo/images.sass
+++ b/.make/demo/images.sass
@@ -99,4 +99,5 @@ body._md-index
         box-shadow: 0 0 0 1px rgba($grey-darken, 0.12), 0 1px 3px 0 rgba($grey-darken, 0.4)
 
       img
+        display: block
         max-width: 100%
