--- a/.make/demo/images.sass
+++ b/.make/demo/images.sass
@@ -117,6 +117,7 @@ table.images-list
       display: flex
       align-items: center
       height: 40px
+      background: white
       transform: translateX(0)
       opacity: 0
       transition: opacity 0.1s linear, transform 0.1s linear
